# crm_ms

./: .gitignore  README.md  Spacefile  app.py  main.py  pyproject.toml  requirements.txt
config/: database.py
docs/: openapi.json
models/: admin.py  assistant.py  certificate.py  cites.py  consultation.py  medical_history.py  medics.py  notification_system.py  pacients.py  user_management.py
routers/: pacients.py
schemas/: schemas.py
services/: pacients.py
src/: app.py  database.sqlite
src/config/: database.py
src/models/: cites.py  medic.py  pacients.py
src/routers/: cites.py  medic.py  pacients.py
src/schemas/: assistant.py  certificate.py  cites.py  consultation.py  medic.py  pacients.py
src/services/: cites.py  medic.py  pacients.py
src/test_doctest/: test_cites.py
src/test_mockito/: test_moc_cites.py  test_moc_medic.py  test_moc_pacients.py
tests/doctest/: test_medic.py  test_pacients.py
tests/mockito/: cites_test.py  medic_test.py  pacients_test.py
